# hybrid-recommender

./: .gitignore  CLEANUP_PLAN.md  DATA_GENERATION_IMPROVEMENTS.md  DATA_QUALITY_AUDIT_REPORT.md  EVALUATION_DIAGNOSIS_REPORT.md  IMPLEMENTATION_COMPLETE.md  PRELIMINARY_AUDIT_FINDINGS.md  PROJECT_GUIDELINES.md  PROJECT_STRUCTURE.md  README.md  README_DATA_SECTION.md  TEMPORAL_CONSISTENCY_FIX.md  TOOLING.md  audit_synthetic_data.py  evaluate_1k_users.py  evaluate_20k_users.py  justfile  pyproject.toml  requirements.txt  validate_nlp_fix.py
data/: bio_validation_report.json  generate_data.py  validate_bios.py
diagnostics/: diagnose_eval.py  diagnose_model_quality.py  validate_bio_diversity.py
scripts/: evaluate_all_models.py  evaluate_by_segment.py
src/: __init__.py  data_loader.py  evaluation.py  preprocessing.py  utils.py
src/evaluation/: __init__.py  batch_evaluator.py  cold_start_evaluator.py  recommender_evaluator.py
src/models/: __init__.py  base_recommender.py  cf_recommender.py  cf_recommender_vectorized.py  hybrid_recommender.py  nlp_recommender.py
tests/: test_cf_model.py  test_models.py  test_pipeline.py
